--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "autoload": {
     "psr-4": {
       "Controllers\\":"App/Controllers",
+      "Models\\": "App/Models",
       "Core\\": "Core/",
       "Config\\": "Config/"
     }
